<resources>
    <string name="app_name">RecipeAI</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_generate">Generate</string>
    <string name="title_library">Recipe Library</string>
    <string name="title_cooking">Cooking</string>
    <string name="add_ingredients">Add Ingredient</string>
    <string name="back_to_ingredients">Back to Ingredients</string>
    <string name="generate_recipe">Generate Recipe</string>
    <string name="test_ingredient_name">Test Ingredient Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_ingredient_here">Type ingredient here …</string>
    <string name="add_ingredients_title">Add Ingredients</string>
    <string name="cook_btn">Cook</string>
    <string name="remove_recipe">Remove</string>
    <string name="PROMPT_TEMPLATE">You will create a step-by-step recipe using the ingredients I give you. You may not deviate from those ingredients, but you aren\'t required to use all of them. If the ingredient is not edible, do not include it. You will give me the instructions in a numbered list no longer than 400 tokens. Here is the list of ingredients: %s.\n First, name the recipe in the form of Recipe: [recipe name], then provide the numbered list after on a new line.</string>
    <string name="library_title">Recipe Library</string>
    <string name="remove">Remove</string>
    <string name="textview">TextView</string>
    <string name="save_recipe">Save Recipe</string>
</resources>