<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.example.recipeai.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" />

    <fragment
        android:id="@+id/navigation_generate"
        android:name="com.example.recipeai.ui.generate.GenerateFragment"
        android:label="@string/title_generate"
        tools:layout="@layout/fragment_generate" />

    <fragment
        android:id="@+id/navigation_cooking"
        android:name="com.example.recipeai.ui.cooking.CookingFragment"
        android:label="@string/title_generate"
        tools:layout="@layout/fragment_cooking" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.recipeai.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_navigation_cooking3"
            app:destination="@id/navigation_cooking" />
    </fragment>
</navigation>