<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addIngredientsFragment"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".ui.ingredients.AddIngredientsFragment">


    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"
        android:text="@string/add_ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddIngredient" />

    <EditText
        android:id="@+id/editTextAddIngredient"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/type_ingredient_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/addIngredientsBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back_to_ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>